--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer class="border-top border-bottom bg-light py-4 mt-3">
+<footer class="border-top bg-light py-4 mt-3">
     <div class="container">
-        <p class="mb-0"><span class="fw-bold">Disclaimer:</span> The calendar data and information provided on this website is unofficial and not officially published by Gedling Borough Council.</p>
-        <p class="mb-0">You can read more <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/blob/main/README.md">about this website</a> and the process behind the publication of bin collection data in other formats.</p>
+        <p><strong>Disclaimer:</strong> The calendar data and information provided on this website is not authored by Gedling Borough Council, but uses official council data sources to provide information in different formats. Data is checked for accuracy, but errors may be possible.</p>
+        <p class="mb-0 small">You can read more <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/blob/main/README.md">about this website</a> and the project behind the publication of bin collection data in open and accessible formats.</p>
     </div>
 </footer>
