--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
     <div class="container">
         {% include logo.html %}
 
-        <h1 class="my-3">Refuse/Waste, Recycling, Glass and Garden bin schedules</h1>
+        <h1 class="my-3">Refuse/Waste, Recycling, Glass and Garden bin collections</h1>
 
-        <p class="mb-0"><strong>Unofficial</strong> calendars for Gedling Borough Council refuse/garden bin collections published in HTML, iCalendar and JSON formats.</p>
+        <p class="mb-0">Open source data for Gedling Borough Council refuse/garden bin collections published in HTML, iCalendar and JSON.</p>
     </div>
 </header>
