--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,20 +1,1 @@
-// Custom CSS
-.schedule {
-    .btn {
-        width: 100%;
-    }
-
-    @include media-breakpoint-up(md) {
-        .schedule {
-          width: 100%;
-        }
-      }
-}
-
-.toast-container {
-    z-index: 11;
-
-    .toast-body {
-        background-color: #fafafa;
-    }
-}
+// RESERVED FOR ANY CUSTOM CSS REQUIRED
