--- a/_includes/collection-schedules.html
+++ b/_includes/collection-schedules.html
@@ -29,7 +29,8 @@
 
                             <script>
                                 document.querySelector('button#{{ subscribeId }}').addEventListener('click', async () => {
-                                    
+
+                                    // Tracking for iCal URL/subscribe
                                     window.dataLayer.push({
                                         'event': 'bin_collection_calendar_subscribe',
                                         'bin_type': '{{ type.name }}',
