--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -12,9 +12,8 @@
     {% assign dataKey = "gedling_borough_council_" | append: dataId | append: "_bin_schedule" %}
 {% endif %}
 
-{% assign jsonData = site.data.icaljs[dataKey].collectionDates %}
-{% assign jsonUrl = "/json/" | append: dataKey | append: ".json" | absolute_url %}
-{% assign icalUrl = "/ical/" | append: dataKey | append: ".ics" | absolute_url %}
+{% assign jsonData = site.data.icaljs[dataKey] %}
+{% assign icalUrl = jsonData.icalPath | absolute_url %}
 
 <h1 class="h2">{{ page.title }}</h1>
 
@@ -29,7 +28,7 @@
     <div class="d-grid d-md-flex gap-2 mt-2">
         <button id="copy-ical-url-btn" type="button" class="btn btn-secondary">Copy iCal URL</button>
         <a href="{{ icalUrl }}" class="btn btn-gedling-red" download>Download calendar</a>
-        <a href="{{ jsonUrl }}" class="btn btn-success">View as JSON</a>
+        <a href="{{ jsonData.jsonPath | absolute_url }}" class="btn btn-success">View as JSON</a>
     </div>
 </div>
 
@@ -59,7 +58,7 @@
     });
 </script>
 
-{% assign months = jsonData | group_by_exp: "collection", "collection.collectionDate | date: '%B %Y'" %}
+{% assign months = jsonData.collectionDates | group_by_exp: "collection", "collection.collectionDate | date: '%B %Y'" %}
 
 {% if isGardenCollection %}
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
