--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,23 @@ $custom-colors: (
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
+$utilities: (
+  "opacity": (
+    property: opacity,
+    class: opacity,
+    state: hover,
+    values: (
+      0: 0,
+      25: .25,
+      50: .5,
+      75: .75,
+      90: .90,
+      95: .95,
+      100: 1,
+    )
+  )
+);
+
 $link-color: #0367FC;
 $input-placeholder-color: $gray-600;
 
