--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,19 +1,21 @@
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        {% assign crumbs = page.url | remove: '/index.html' | split: '/' %}
-        <li class="breadcrumb-item">
-            <a href="{{ site.url }}">Home</a>
-        </li>
-        {% for crumb in crumbs offset: 1 %}
-            {% if forloop.last %}
-                <li class="breadcrumb-item active" aria-current="page">
-                    {{ page.breadcrumb | default: page.title }}
-                </li>
-            {% else %}
-                <li class="breadcrumb-item">
-                    <a href="{{ site.url }}{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' | replace:'without-plugin/','without-plugins/' }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a>
-                </li>
-            {% endif %}
-        {% endfor %}
-    </ol>
+<nav aria-label="breadcrumb" class="bg-light py-3 botder-1 border-bottom">
+    <div class="container">
+        <ol class="breadcrumb mb-0">
+            {% assign crumbs = page.url | remove: '/index.html' | split: '/' %}
+            <li class="breadcrumb-item">
+                <a href="{{ site.url }}">Home</a>
+            </li>
+            {% for crumb in crumbs offset: 1 %}
+                {% if forloop.last %}
+                    <li class="breadcrumb-item active" aria-current="page">
+                        {{ page.breadcrumb | default: page.title }}
+                    </li>
+                {% else %}
+                    <li class="breadcrumb-item">
+                        <a href="{{ site.url }}{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' | replace:'without-plugin/','without-plugins/' }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ol>
+    </div>
 </nav>
