--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,7 @@ $bootstrap-icons-font-src: url("../fonts/bootstrap-icons.woff2") format("woff2")
 @import "bootstrap/scss/functions";
 
 $font-family-sans-serif: "Montserrat", sans-serif;
+$headings-font-weight: "bold";
 
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/variables-dark";
