--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | absolute_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | absolute_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | absolute_url }}">
+    <link rel="manifest" href="{{ '/site.webmanifest' | absolute_url }}">
+    <link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | absolute_url }}" color="#a9233e">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="search" type="application/opensearchdescription+xml" href="{{ '/opensearch.xml' | absolute_url }}" title="{{ site.title }}: Collection search">
+
     <script>
       window.dataLayer = window.dataLayer || [];
     </script>
