--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,6 +70,7 @@ $body-bg: white;
 @import "bootstrap/scss/toasts";
 @import "bootstrap/scss/breadcrumb";
 @import "bootstrap/scss/forms";
+@import "bootstrap/scss/alert";
 @import "bootstrap/scss/helpers";
 @import "bootstrap/scss/utilities/api";
 
