Add header image and breakpoint on development environment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,11 @@
 {% else %}
   {% assign isHome = false %}
 {%- endif -%}
+{%- if jekyll.environment == 'production' -%}
+  {% assign isProduction = true %}
+{% else %}
+  {% assign isProduction = false %}
+{%- endif -%}
 <!DOCTYPE html>
 <html lang="{{ site.lang }}">
   <head>
@@ -29,31 +34,38 @@
       window.dataLayer = window.dataLayer || [];
     </script>
 
-    {% if jekyll.environment != 'production' %}
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl+ '&gtm_auth={{ site.gtm.auth }}&gtm_preview={{ site.gtm.preview }}&gtm_cookies_win=x';f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','{{ site.gtm.container_id }}');
-      </script>
-    {% else %}    
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    {% if isProduction %}
+      <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','{{ site.gtm.container_id }}');
       </script>
+    {% else %}    
+      <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl+ '&gtm_auth={{ site.gtm.auth }}&gtm_preview={{ site.gtm.preview }}&gtm_cookies_win=x';f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','{{ site.gtm.container_id }}');
+      </script>
     {% endif %}
 
   </head>
-  <body>
-    {% if jekyll.environment != 'production' %}
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm.container_id }}&gtm_auth={{ site.gtm.auth }}&gtm_preview={{ site.gtm.preview }}&gtm_cookies_win=x"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <body class="{% if isProduction %}production{% else %}development{% endif %}">
+    {% if isProduction %}
+      <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm.container_id }}"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe>
+      </noscript>
     {% else %}
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm.container_id }}"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm.container_id }}&gtm_auth={{ site.gtm.auth }}&gtm_preview={{ site.gtm.preview }}&gtm_cookies_win=x"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+      </noscript>
     {% endif %}
+
       <a class="visually-hidden-focusable" href="#content">Skip to main content</a>
 
       {% if isHome == true %}
