--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="text-center bg-black text-white py-4">
+<header class="header-full text-center bg-black text-white py-4">
     <div class="container">
         {% include logo.html %}
 
