--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,6 +71,7 @@ $body-bg: white;
 @import "bootstrap/scss/breadcrumb";
 @import "bootstrap/scss/forms";
 @import "bootstrap/scss/alert";
+@import "bootstrap/scss/tables";
 @import "bootstrap/scss/helpers";
 @import "bootstrap/scss/utilities/api";
 
