--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -72,12 +72,17 @@
 {% assign changedCollections = jsonData.revisedCollectionDates %}
 
 {% if changedCollections.size > 0 %}
+    {% if changedCollections.size == 1 %}
+        {% assign datesPlural = 'collection date' %}
+    {% else %}
+        {% assign datesPlural = 'collection dates' %}
+    {% endif %}
     <div class="changed-collection-dates pb-3 mb-5 border-1 border-bottom">
         <h2 class="h3">Changed collection dates</h2>
 
         <div class="row">
             <div class="col-md-6">
-                <p>This calendar has a total of <strong>{{ changedCollections.size }}</strong> collection date(s) in the schedule which have been changed to a revised day. This is often due to certain collection days occurring on a national holiday e.g. bank holiday. This is denoted by the <em>Usual collection date</em> column indicating what would be the usual collection day, followed by the revised collection date in the <em>revised date</em> column.</p>
+                <p>This calendar has a total of <strong>{{ changedCollections.size }}</strong> {{ datesPlural }} in the schedule which have been changed to a revised day. This is often due to certain collection days occurring on a national holiday e.g. bank holiday. This is denoted by the <em>Usual collection date</em> column indicating what would be the usual collection day, followed by the revised collection date in the <em>revised date</em> column.</p>
             </div>
             <div class="col-md-6">
                 <table class="table table-striped table-bordered table-sm">
