Update usual collection date calculation to handle distance being before and after

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -71,7 +71,7 @@
 
 {% assign changedCollections = jsonData.revisedCollectionDates %}
 
-{% if changedCollections.size > 0 %}
+{% if changedCollections.size > 0 and isGardenCollection == false %}
     {% if changedCollections.size == 1 %}
         {% assign datesPlural = 'collection date' %}
     {% else %}
