--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="border-top bg-light py-4 mt-3">
     <div class="container">
-        <p><strong>Disclaimer:</strong> The calendar data and information provided on this website is not authored by Gedling Borough Council, but uses official council data sources to provide information in different formats. Data is checked for accuracy, but errors may be possible.</p>
-        <p class="mb-0 small">You can read more <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/blob/main/README.md">about this website</a> and the project behind the publication of bin collection data in open and accessible formats.</p>
+        <p><strong>Disclaimer:</strong> The calendar data and information provided on this website is not authored by Gedling Borough Council, but uses official council data sources to provide information in open formats. All data is checked for accuracy, but errors may be possible.</p>
+        <p class="mb-0 small">You can read more <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/blob/main/README.md">about this website</a> and the project behind the publication of Gedling bin collection data in open and accessible formats.</p>
     </div>
 </footer>
