--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ $green-bin: #6eb43f;
 $glass-bin: #00aeef;
 
 $custom-colors: (
-    "gedling-red": #a9233e,
+    "gedling-red": #AA273E,
     "green-bin": $green-bin,
     "black-bin": #a7a9ac,
     "glass-bin": $glass-bin,
