--- a/_includes/header-minimal.html
+++ b/_includes/header-minimal.html
@@ -1,4 +1,4 @@
-<header class="bg-black text-white py-2">
+<header class="bg-gedling-red text-white py-2">
     <div class="container">
         <div class="d-md-flex justify-content-between align-items-center">
             <a href="{{ site.url }}">
