Update calendar key

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -151,28 +151,33 @@
     <div class="refuse-collection-key my-4" aria-hidden="true">
         <h4 class="text-muted h6 fw-bold text-uppercase">Calendar key</h4>
 
-        <div class="d-lg-flex">
-            <div class="me-md-3">
-                <i class="bi bi-square-fill text-black-bin"></i>
+        <div class="d-xl-flex gap-4">
+            <div class="gap-2">
+                <i aria-hidden="true" class="bi bi-square-fill text-black-bin"></i>
                 <span class="ms-1">General Waste</span>
             </div>
 
-            <div class="me-md-3">
-                <i class="bi bi-square-fill text-green-bin"></i>
+            <div class="gap-2">
+                <i aria-hidden="true" class="bi bi-square-fill text-green-bin"></i>
                 <span class="ms-1">Recycling</span>
             </div>
 
-            <div class="me-md-3">
-                <i class="bi bi-square-fill text-glass-bin"></i>
+            <div class="gap-2">
+                <span class="d-inline-block" aria-hidden="true" style="background: linear-gradient(to right, #6EB43F 0%, #00AEEF 100%); width: 16px; height: 16px; border-radius: 2px; vertical-align: -.125em;"></span>
                 <span class="ms-1">Recycling &amp; Glass</span>
             </div>
 
-            <div class="me-md-3">
-                <i class="bi bi-square text-black"></i>
+            <div class="gap-2">
+                <i aria-hidden="true" class="bi bi-square-fill text-glass-bin"></i>
+                <span class="ms-1">Glass Box</span>
+            </div>
+
+            <div class="gap-2">
+                <i aria-hidden="true" class="bi bi-square text-black"></i>
                 <span class="ms-1">Next/Upcoming Collection</span>
             </div>
 
-            <div>
+            <div class="gap-2">
                 <i class="bi bi-square text-danger"></i>
                 <span class="ms-1">Changed Collection</span>
             </div>
