Add background key

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,7 +24,7 @@ $custom-colors: (
     "gedling-red": #AA273E,
     "green-bin": $green-bin,
     "black-bin": #a7a9ac,
-    "glass-bin": $glass-bin,
+    "glass-box": $glass-bin,
     "garden-bin": #a0522d
 );
 
