--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -168,7 +168,7 @@
             </div>
 
             <div class="gap-2">
-                <i aria-hidden="true" class="bi bi-square-fill text-glass-bin"></i>
+                <i aria-hidden="true" class="bi bi-square-fill text-glass-box"></i>
                 <span class="ms-1">Glass Box</span>
             </div>
 
