--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 // Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 // Bootstrap icons
 $bootstrap-icons-font-src: url("../fonts/bootstrap-icons.woff2") format("woff2"), url("../fonts/bootstrap-icons.woff") format("woff");
@@ -11,8 +11,8 @@ $bootstrap-icons-font-src: url("../fonts/bootstrap-icons.woff2") format("woff2")
 // Boostrap 5
 @import "bootstrap/scss/functions";
 
-$font-family-sans-serif: "Montserrat", sans-serif;
-$headings-font-weight: "bold";
+$font-family-sans-serif: Inter, Arial, sans-serif;
+$headings-font-weight: bold;
 
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/variables-dark";
